--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "dart-sass": "^1.25.0",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.13.1",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks-helper": "^1.6.0",
