--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.4.1",
+    "express": "^4.17.1",
     "google-distance-matrix": "^1.1.1",
     "history": "^4.10.1",
+    "minimist": "^1.2.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks-helper": "^1.6.0",
