--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-notifications": "^1.5.0-beta.0",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "sass": "^1.25.0"
   },
   "scripts": {
