--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-distance-matrix": "^1.1.1",
     "history": "^4.10.1",
     "minimist": "^1.2.5",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks-helper": "^1.6.0",
