--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
     "react": "^16.12.0",
+    "react-calendar": "^3.0.1",
+    "react-date-picker": "^8.0.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-hooks-helper": "^1.6.0",
     "react-input-mask": "^2.0.4",
