--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-distance-matrix": "^1.1.1",
     "history": "^4.10.1",
     "minimist": "^1.2.5",
+    "moment": "^2.25.3",
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
     "react": "^16.12.0",
